add navbar html structure and style it

--- a/index.html
+++ b/index.html
@@ -7,5 +7,16 @@
     <link rel="stylesheet" href="./main.css" />
     <title>Resume for SP</title>
   </head>
-  <body></body>
+  <body>
+    <section class="hero">
+      <header class="navbar">
+        <nav class="links">
+          <a href="#somewhere">Blog</a>
+          <a href="#somewhere">Speaking Events</a>
+        </nav>
+        <p>Hazel</p>
+        <a class="contact" href="#contact">Contact Me</a>
+      </header>
+    </section>
+  </body>
 </html>
