add tagline html and style it

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <p>Hazel</p>
         <a class="contact" href="#contact">Contact Me</a>
       </header>
+      <div class="hero-content">
+        <h1 class="tagline">
+          I'm a <em>Scientist</em> and a <em>Speaker</em> who is interested in
+          the psychology of greed.
+        </h1>
+      </div>
     </section>
   </body>
 </html>
