add misson and skills and style them

--- a/index.html
+++ b/index.html
@@ -28,6 +28,29 @@
           I'm a <em>Scientist</em> and a <em>Speaker</em> who is interested in
           the psychology of greed.
         </h1>
+        <div class="two-column-section">
+          <p>My Misson</p>
+          <p>
+            The misson Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Repudiandae, dolores qui. Laudantium iste quisquam architecto
+            possimus dolor quibusdam! Temporibus id veritatis unde eligendi vero
+            ipsum. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Omnis, quo.
+          </p>
+        </div>
+        <div class="two-column-section">
+          <p>Specialties</p>
+          <ul class="skills">
+            <li>skills</li>
+            <li>skills</li>
+            <li>skills</li>
+            <li>skills</li>
+            <li>skills</li>
+            <li>skills</li>
+            <li>skills</li>
+            <li>skills</li>
+          </ul>
+        </div>
       </div>
     </section>
   </body>
