add tech blog section and style it

--- a/index.html
+++ b/index.html
@@ -53,5 +53,38 @@
         </div>
       </div>
     </section>
+    <section class="blog-section">
+      <div class="blog-content">
+        <div class="two-column-section">
+          <p>Tech Blog</p>
+          <div class="blog-posts">
+            <p class="blog-heading">This Is Your Brain On Helium</p>
+            <p class="blog-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              harum similique dicta voluptates, ex ratione nisi qui aperiam
+              soluta laudantium deserunt odio architecto ullam hic tempora
+              maxime dolorem. Inventore, recusandae!
+            </p>
+            <div class="blog-date">Jan 1, 3000</div>
+            <p class="blog-heading">This Is Your Brain On Helium</p>
+            <p class="blog-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              harum similique dicta voluptates, ex ratione nisi qui aperiam
+              soluta laudantium deserunt odio architecto ullam hic tempora
+              maxime dolorem. Inventore, recusandae!
+            </p>
+            <div class="blog-date">Jan 1, 3000</div>
+            <p class="blog-heading">This Is Your Brain On Helium</p>
+            <p class="blog-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias
+              harum similique dicta voluptates, ex ratione nisi qui aperiam
+              soluta laudantium deserunt odio architecto ullam hic tempora
+              maxime dolorem. Inventore, recusandae!
+            </p>
+            <div class="blog-date">Jan 1, 3000</div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
