add speaking events section

--- a/index.html
+++ b/index.html
@@ -86,5 +86,23 @@
         </div>
       </div>
     </section>
+    <section class="events-section">
+      <div class="events-content">
+        <div class="two-column-section">
+          <p>Speaking Events</p>
+          <div class="events-card">
+            <p class="event-title">Some Title</p>
+            <p class="event-location">Somewhere</p>
+            <p class="event-date">Somtime</p>
+            <p class="event-title">Some Title</p>
+            <p class="event-location">Somewhere</p>
+            <p class="event-date">Somtime</p>
+            <p class="event-title">Some Title</p>
+            <p class="event-location">Somewhere</p>
+            <p class="event-date">Somtime</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
