add footer and footer styles

--- a/index.html
+++ b/index.html
@@ -104,5 +104,12 @@
         </div>
       </div>
     </section>
+    <footer>
+      <div class="footer-content">
+        <img src="./images/instagram.png" alt="" />
+        <img src="./images/twitter.png" alt="" />
+        <p>made with &hearts;</p>
+      </div>
+    </footer>
   </body>
 </html>
