add media queries to make it responsive

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           the psychology of greed.
         </h1>
         <div class="two-column-section">
-          <p>My Misson</p>
+          <p class="section-heading">My Misson</p>
           <p>
             The misson Lorem ipsum dolor sit amet consectetur adipisicing elit.
             Repudiandae, dolores qui. Laudantium iste quisquam architecto
@@ -39,7 +39,7 @@
           </p>
         </div>
         <div class="two-column-section">
-          <p>Specialties</p>
+          <p class="section-heading">Specialties</p>
           <ul class="skills">
             <li>skills</li>
             <li>skills</li>
@@ -56,7 +56,7 @@
     <section class="blog-section">
       <div class="blog-content">
         <div class="two-column-section">
-          <p>Tech Blog</p>
+          <p class="section-heading">Tech Blog</p>
           <div class="blog-posts">
             <p class="blog-heading">This Is Your Brain On Helium</p>
             <p class="blog-text">
@@ -89,7 +89,7 @@
     <section class="events-section">
       <div class="events-content">
         <div class="two-column-section">
-          <p>Speaking Events</p>
+          <p class="section-heading">Speaking Events</p>
           <div class="events-card">
             <p class="event-title">Some Title</p>
             <p class="event-location">Somewhere</p>
